<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orderingFromXml="true" >

    <PreferenceScreen
        android:summary="@string/pref_lock_setting_hint"
        android:title="@string/pref_lock_setting" >
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.gmail.fubuky35.wothelock.reversi.lock.SettingReversiLockActivity"
            android:targetPackage="com.gmail.fubuky35.wothelock" />
    </PreferenceScreen>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/key_lock_enable"
        android:title="@string/pref_lock_enable" />

    <PreferenceScreen
        android:key="@string/key_lock_test"
        android:summary="@string/lock_test_hint"
        android:title="@string/lock_test" />

</PreferenceScreen>