<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <View
        android:id="@+id/vwBack"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#000000" />

    <TextView
        android:id="@+id/txtWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:shadowColor="@color/winner_text_shadow"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/app_name"
        android:textColor="@color/winner_text"
        android:textSize="@dimen/font_size_winner"
        android:textStyle="italic" />

    <LinearLayout
        android:id="@+id/settting_button_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right" >

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back" />

        <Button
            android:id="@+id/detect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

    </LinearLayout>

</FrameLayout>